--- a/.github/workflows/spack-ubuntu.yml
+++ b/.github/workflows/spack-ubuntu.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
         run : |
           apt update
-          apt install gfortran-9
+          apt install -y gfortran-9
           source /spack/share/spack/setup-env.sh
           git clone --depth=1 https://github.com/LIHPC-Computational-Geometry/spack_recipes_meshing.git
           spack repo add ./spack_recipes_meshing/meshing_repo
