--- a/.github/workflows/spack-ubuntu.yml
+++ b/.github/workflows/spack-ubuntu.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           source /spack/share/spack/setup-env.sh 
           spack load cmake
-          spack install lima@main+scripting
+          spack install lima@main
 
       - name: Test c++ lib install
         shell: bash
