--- a/.github/workflows/spack-ubuntu.yml
+++ b/.github/workflows/spack-ubuntu.yml
@@ -14,7 +14,7 @@ jobs:
     # well on Linux, Windows or Mac.
     runs-on: ubuntu-latest
     container:
-      image: aberzen/mgx-ubuntu.20.04-spack.0.19.0
+      image: lihpccg/mgx-ubuntu.20.04-spack.0.19.0:latest
     strategy:
       fail-fast: false
       matrix:
@@ -38,16 +38,26 @@ jobs:
         shell: bash
         run: |
           source /spack/share/spack/setup-env.sh 
-          spack load cmake
-          spack install lima@main
+          spack env activate meshing-env
+          spack add lima
+          # we use GITHUB_WORKSPACE instead of github.Workspace because in containers it
+          # seems to be incorrect (see https://github.com/actions/runner/issues/2058)
+          spack develop -p $GITHUB_WORKSPACE --no-clone lima@7.7.9
+          spack install --no-checksum
+          # now we build using cmake with spack provided build variables
+          spack load --only dependencies --sh lima > spack_env_file.sh
+          source spack_env_file.sh
+          cmake -DCMAKE_INSTALL_PREFIX=${{env.INSTALL_DIR}} .
+          make -j
+          #make test
 
       - name: Test c++ lib install
         shell: bash
         run: |
           source /spack/share/spack/setup-env.sh
-          spack load cmake
+          spack env activate meshing-env
           spack load lima
-          cd test_link_cpp/
+          cd test_link/
           cmake -S . -B build_exe
           cmake --build build_exe
           cd build_exe
