--- a/src/Lima/CMakeLists.txt
+++ b/src/Lima/CMakeLists.txt
@@ -3,9 +3,16 @@ set (CURRENT_PACKAGE_MACRO_NAME "LIMA_KERNEL")
 include (${CMAKE_SOURCE_DIR}/cmake/version.cmake)
 include (${CMAKE_SOURCE_DIR}/cmake/common.cmake)
 include (${CMAKE_SOURCE_DIR}/cmake/workarounds.cmake)
-#include (${CMAKE_SOURCE_DIR}/cmake/FindHdf145.cmake)
+if (MACHINE_TYPES)
+	find_package (MachineTypes REQUIRED)
+endif (MACHINE_TYPES)
+if (FORMAT_MLI)
+	include (${CMAKE_SOURCE_DIR}/cmake/FindHdf145.cmake)
+endif (FORMAT_MLI)
 unset (HDF5_USE_STATIC_LIBRARIES)
-find_package (HDF5 COMPONENTS CXX)
+if (FORMAT_MLI2)
+	find_package (HDF5 COMPONENTS CXX REQUIRED)
+endif (FORMAT_MLI2)
 find_package (Threads)
 
 # EXPURGE_BEGINNING_TAG FIND_LOCAL_DEPENDENCIES
@@ -133,6 +140,6 @@ install (EXPORT ${CMAKE_PACKAGE_TARGETS_NAME}
 install (FILES ${CMAKE_PACKAGE_CONFIG_FILE} ${CMAKE_PACKAGE_VERSION_FILE} DESTINATION ${ConfigPackageLocation} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ)
 
 # Le fichier FindHDF5.cmake :
-#install(FILES ${CMAKE_SOURCE_DIR}/cmake/FindHdf145.cmake DESTINATION ${ConfigPackageLocation} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ)
+install(FILES ${CMAKE_SOURCE_DIR}/cmake/FindHdf145.cmake DESTINATION ${ConfigPackageLocation} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ)
 
 
