--- a/src/Lima/CMakeLists.txt
+++ b/src/Lima/CMakeLists.txt
@@ -8,6 +8,9 @@ if (MACHINE_TYPES)
 endif (MACHINE_TYPES)
 if (FORMAT_MLI)
 	include (${CMAKE_SOURCE_DIR}/cmake/FindHdf145.cmake)
+	if (NOT HDF145_FOUND)
+		message (FATAL_ERROR "Support du format mli demandé mais bibliothèque HDF145 non trouvée.")
+	endif (NOT HDF145_FOUND)
 endif (FORMAT_MLI)
 unset (HDF5_USE_STATIC_LIBRARIES)
 if (FORMAT_MLI2)
