--- a/src/Lima/cmake/LimaConfig.cmake.in
+++ b/src/Lima/cmake/LimaConfig.cmake.in
@@ -26,7 +26,7 @@ check_required_components (Lima)
 check_required_components (LimaScripting)
 check_required_components (Xlmlima)
 check_required_components (Comparaison)
-check_required_components (Symetrize)
+check_required_components (Symetrise)
 
 # Les formats optionnels supportés (ON) ou non (OFF) :
 set (MLI_SUPPORT @MLI_SUPPORTED@)
