--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,10 @@ option (SUMESH "Utilisation de la bibliothèque de sumesh." ON)
 option (FORMAT_MLI "Format obsolète déconseillé en externe. Requiert HDF145." ON)
 option (FORMAT_MLI2 "Format remplaçant le format MLI recommandé partout. Requiert HDF 5 v >= 1.10.0." ON)
 
+# Binaires optionnels :
+option (BUILD_SCRIPTING "Génération du wrapper swig/python pour utilisation scriptée de Lima." ON)
+option (BUILD_XLMLIMA "Utilitaire xlmlima (conversions, préparations de maillages), symetrise (symétrisation / x, y ou z)." ON)
+option (BUILD_TESTS "Création de l'utilitaire comparaison." OFF)
+
 add_subdirectory (src)
 enable_testing ( )
