--- a/src/Lima/CMakeLists.txt
+++ b/src/Lima/CMakeLists.txt
@@ -46,6 +46,9 @@ if (${HDF145_FOUND})
 	message (STATUS "======================> Ajout du support du format mli")
 	list (APPEND EXTERNAL_LIBS_FLAGS "HDF5_1_4_3")
 	list (APPEND EXTERNAL_LIBS_FLAGS "-D__INTERNE_MALIPP")
+	if (WRITER_MLI)
+		list (APPEND EXTERNAL_LIBS_FLAGS "-D__INTERNE_MALIPP_WRITER")
+	endif (WRITER_MLI)
 	target_link_libraries (Lima PUBLIC HDF145::hdf145_cpp)
 	set (MLI_SUPPORTED ON)
 endif (${HDF145_FOUND})
